--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="color-scheme" content="dark light">
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any">
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./images/mobile-icon.png">
+    <link rel="stylesheet" href="./fonts/fonts.css">
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
@@ -49,19 +49,208 @@
         <h1 class="header__title title">
           no focus
         </h1>
-        <section class="header__subtitle">
-            <span class="header__subtitle-item title-decor">
+        <h3 class="header__subtitle title-decor">
+            <span class="header__subtitle-item">
               Что делать, когда не можешь делать ничего
             </span>
-            <span class="header__subtitle-item title-decor">
+            <span class="header__subtitle-itemr">
               Или почему нам так сложно сконцентрироваться, особенно когда очень надо
             </span>
-        </section>
+        </h3>
       </section>
     </header>
-    <div>
-      asd
-    </div>
+    <main class="content">
+      <section class="content__section">
+        <h2 class="content__heading">
+          Почему сосредоточиться так сложно
+        </h2>
+        <article class="content__article">
+          <h3 class="content__heading-h3 title-decor">
+            Многозадачность
+          </h3>
+          <p class="content__article-p">
+            Особенно сложно сосредоточиться, когда задач много и все они — важные.
+            Где же легендарная многозадачность, когда она так нужна вам
+            (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто
+            не существует. Исследователи
+            <a class="content__link" 
+            href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/"
+            target="_blank"
+            rel="noopener noreferrer"
+            >
+              выяснили</a>,
+            что мозгу тяжело концентрироваться
+            даже на двух делах одновременно. А когда в поле внимания попадает несколько
+            важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны
+            стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
+          </p>
+        </article>
+        <article class="content__article">
+          <h3 class="content__heading-h3 title-decor">
+            Дофамин
+          </h3>
+          <p class="content__article-p">
+            С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
+            невозможности сосредоточиться замешана и полная противоположность
+            стрессу — дофамин. Это вещество участвует в системе вознаграждения
+            мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то
+            более «приятное» для мозгов. Например, смотрим лайки в соцсетях.
+            В это время и выделяется дофамин — и мы чувствуем удовольствие.
+            Получается замкнутый круг: чем больше отвлекаешься, тем больше
+            удовольствия получаешь.
+          </p>
+        </article>
+      </section>
+      <section class="content__section">
+        <h2 class="content__heading">
+          Что снижает концентрацию внимания?
+        </h2>
+        <article class="content__article">
+          <h3 class="content__heading-h3 title-decor">
+            Многозадачность
+          </h3>
+          <p class="content__article-p">
+            Как концентрация может снижаться из-за… концентрации? Любая
+            стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш
+            мозг постоянно «сканировать» окружающую среду на предмет опасности.
+            Например, читать новости вместо работы. Но быть собранными всё
+            время — невозможно. Концентрация — мышца, и она может не выдержать,
+            если не давать ей отдохнуть.
+          </p>
+        </article>
+        <article class="content__article">
+          <h3 class="content__heading-h3 title-decor">
+            Еда
+          </h3>
+          <p class="content__article-p">
+            «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+            доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+            эта энергия также быстро, как и приходит. А мы в результате попадаем
+            на «углеводные качели»: как только действие «быстрых углеводов»
+            заканчивается, мы чувствуем усталость и сонливость. И хотим ещё
+            больше быстрых углеводов.
+          </p>
+        </article>
+        <article class="content__article">
+          <h3 class="content__heading-h3 title-decor">
+            Гаджеты
+          </h3>
+          <p class="content__article-p">
+            Да-да, это та самая ситуация, когда на экране ноутбука — код,
+            в наушниках — подкаст, а на компьютере фоном — ещё и видео с
+            забавными утятами. В результате мозг пытается переключиться с одной
+            задачи на другую — и просто не может. А чтобы вернуться к состоянию
+            полной концентрации, человеку в среднем нужно 20 минут. Вот и
+            получается, что чем больше времени мы проводим в гаджетах, тем
+            больше времени затем нужно, чтобы вернуться к работе.
+          </p>
+        </article>
+      </section>
+      <section class="content__section">
+        <h2 class="content__heading">
+          Как концентрироваться лучше, чем золотая рыбка
+          (то есть дольше трёх секунд)
+        </h2>
+        <h3 class="content__heading-h3 title-decor">
+          5 простых (на самом деле не очень) советов
+        </h3>
+        <article class="content__article">
+          <h4 class="content__heading-h4 title-decor">
+            Представьте небо и облака
+          </h4>
+          <p class="content__article-p">
+            Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+            успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+            как раз и мешают эти сложные задачи делать. В такие моменты можно
+            закрыть глаза и представить, что чистое небо — это вы, а облака —
+            тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+            где-то там, за тучами, и никуда не денется. Это упражнение поможет
+            вернуться в настоящий момент, а не волноваться о потенциальных
+            проблемах из будущего.
+          </p>
+        </article>
+        <article class="content__article">
+          <h4 class="content__heading-h4 title-decor">
+            Включите музыку
+          </h4>
+          <p class="content__article-p">
+            Но не любую, и не любимую. Любимая может быть связана с сильными
+            положительными эмоциями, которые тоже очень сильно отвлекают.
+            Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+            попробовать включить плейлист в «белым шумом» или нейромузыкой.
+          </p>
+        </article>
+        <article class="content__article">
+          <h4 class="content__heading-h4 title-decor">
+            Прогуляйтесь
+          </h4>
+          <p class="content__article-p">
+            Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+            <a class="content__link"
+            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+            target="_blank"
+            rel="noopener noreferrer"
+            >
+              показал</a>,
+            что созерцание природы повышает концентрацию, в то время
+            как после просмотра городских пейзажей она наоборот понижается.
+            Можно совместить прогулку с физическими упражнениями или бегом —
+            так в мозг поступит ещё больше кислорода и он будет лучше работать.
+            Но и простая двадцатиминутная прогулка — тоже отличный вариант.
+          </p>
+        </article>
+        <article class="content__article">
+          <h4 class="content__heading-h4 title-decor">
+            Хорошо ешьте
+          </h4>
+          <p class="content__article-p">
+            Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+            которые препятствуют резким скачкам сахара в крови. Например, с
+            высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+            чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+          </p>
+        </article>
+        <article class="content__article">
+          <h4 class="content__heading-h4 title-decor">
+            Читайте
+          </h4>
+          <p class="content__article-p">
+            Настоящие бумажные книги. Это правда помогает с концентрацией:
+            чтобы прочитать пост в соцсети, достаточно нескольких минут или
+            даже секунд. А вот интересная книга способна затянуть и на
+            несколько часов и круто тренирует направленное внимание.
+          </p>
+        </article>
+      </section>
+      <section class="content__section content__section-images">
+        <h3 class="content__heading-h3 title-decor">
+           А можно в картинках?
+        </h3>
+        <img src="./images/sunset.png"
+          alt="Рисунок заката"
+          loading="lazy"
+          class="content__image">
+        <img src="./images/ice-cream.png"
+          alt="Рисунок милых антропоморфных шариков мороженого"
+          loading="lazy"
+          class="content__image">
+        <img src="./images/tape.png"
+          alt="Рисунок аудиокассеты"
+          loading="lazy"
+          class="content__image">
+        <img src="./images/books.png"
+          alt="Рисунок стопки книг"
+          loading="lazy"
+          class="content__image">
+        <img src="./images/street.png"
+          alt="Рисунок улицы с домами, дорогой и пешеходным переходом"
+          loading="lazy"
+          class="content__image">
+      </section>
+    </main>
+    <footer class="footer">
+      focus
+    </footer>
     <script src="./scripts/script.js"></script>
   </body>
 </html>
