finished main for up to 768w

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
           </p>
         </article>
       </section>
-      <section class="content__section content__section-images">
+      <section class="content__section-images">
         <h3 class="content__heading-h3 title-decor">
            А можно в картинках?
         </h3>
