--- a/index.html
+++ b/index.html
@@ -248,8 +248,10 @@
           class="content__image">
       </section>
     </main>
-    <footer class="footer">
-      focus
+    <footer class="footer decorated-zone">
+      <span class="footer__title title">
+        focus
+      </span>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
