removed styles from dark/light

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span class="header__subtitle-item">
               Что делать, когда не можешь делать ничего
             </span>
-            <span class="header__subtitle-itemr">
+            <span class="header__subtitle-item">
               Или почему нам так сложно сконцентрироваться, особенно когда очень надо
             </span>
         </h3>
