--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <header class="header decorated-zone">
       <span class="header__decoration" aria-hidden="true">
       </span>
-      <section class="header__grid">
         <nav class="header__theme-menu">
           <ul class="header__theme-menu-list">
             <li class="header__theme-menu-item">
@@ -50,18 +49,13 @@
         <h1 class="header__title title">
           no focus
         </h1>
-        <h3 class="header__subtitle title-decor">
-            <span class="header__subtitle-item">
-              Что делать, когда не можешь делать ничего
-            </span>
-            <span class="header__subtitle-item">
-              Или почему нам так сложно сконцентрироваться, особенно когда очень надо
-            </span>
-        </h3>
-      </section>
+        <p class="header__subtitle title-decor">
+          Что делать, когда не можешь делать ничего <br>
+          Или почему нам так сложно сконцентрироваться, особенно когда очень надо
+        </p>
     </header>
     <main class="content">
-      <section class="content__section">
+      <section class="content__section content__section_2x2">
         <h2 class="content__heading">
           Почему сосредоточиться так сложно
         </h2>
@@ -102,7 +96,7 @@
           </p>
         </article>
       </section>
-      <section class="content__section">
+      <section class="content__section content__section_tablet content__section_desktop">
         <h2 class="content__heading">
           Что снижает концентрацию внимания?
         </h2>
@@ -147,7 +141,7 @@
           </p>
         </article>
       </section>
-      <section class="content__section">
+      <section class="content__section content__section_2x6">
         <h2 class="content__heading">
           Как концентрироваться лучше, чем золотая рыбка
           (то есть дольше трёх секунд)
@@ -155,7 +149,7 @@
         <h3 class="content__heading-h3 title-decor">
           5 простых (на самом деле не очень) советов
         </h3>
-        <article class="content__article">
+        <article class="content__article content__article_two-columns">
           <h4 class="content__heading-h4 title-decor">
             Представьте небо и облака
           </h4>
@@ -223,36 +217,36 @@
           </p>
         </article>
       </section>
-      <section class="content__section-images">
-        <h3 class="content__heading-h3 title-decor">
+      <section class="content__section content__section_images">
+        <h2 class="content__heading-h3 title-decor">
            А можно в картинках?
-        </h3>
+        </h2>
         <img src="./images/sunset.png"
           alt="Рисунок заката"
           loading="lazy"
-          class="content__image">
+          class="content__image content__image_sunset">
         <img src="./images/ice-cream.png"
           alt="Рисунок милых антропоморфных шариков мороженого"
           loading="lazy"
-          class="content__image">
+          class="content__image content__image_icecream">
         <img src="./images/tape.png"
           alt="Рисунок аудиокассеты"
           loading="lazy"
-          class="content__image">
+          class="content__image content__image_tape">
         <img src="./images/books.png"
           alt="Рисунок стопки книг"
           loading="lazy"
-          class="content__image">
+          class="content__image content__image_books">
         <img src="./images/street.png"
           alt="Рисунок улицы с домами, дорогой и пешеходным переходом"
           loading="lazy"
-          class="content__image">
+          class="content__image content__image_street">
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <span class="footer__title title">
+      <h5 class="footer__title title">
         focus
-      </span>
+      </h5>
     </footer>
     <script src="./scripts/script.js"></script>
   </body>
